# georgian-django-payments

./: .gitignore  LICENSE  MANIFEST.in  README.rst  myproject.toml  requirements.txt  setup.cfg  setup.py
georgian_payments/: .gitignore  admin.py  apps.py  bank_settings.py  choices.py  manage.py  models.py  urls.py
georgian_payments/georgian_payments/: asgi.py  settings.py  urls.py  wsgi.py
georgian_payments/management/commands/: credo_loan_automatizing.py  tbc_loan_automatization.py  ufc_status_automatizing.py
georgian_payments/migrations/: 0001_initial.py
georgian_payments/sdk/: __init__.py  base.py  bog.py  credo.py  georgian_card.py  space.py  tbc.py  ufc.py
georgian_payments/serialaizers/: __init__.py  credo.py  space.py
georgian_payments/templates/payment/: check_response.xml  register_response.xml
georgian_payments/views/: __init__.py  bog.py  georgian_card.py  space.py  tbc.py
payments/: admin.py  models.py  settings.py  urls.py  utils.py
payments/management/commands/: credo_loan_automatizing.py  tbc_loan_automatization.py  ufc_status_automatizing.py
payments/sdk/: base.py  bog.py  credo.py  georgian_card.py  space.py  tbc.py  ufc.py
payments/serialaizers/: space.py
payments/views/: __init__.py  bog.py  georgian_card.py  space.py  tbc.py
