[metadata]
name = georgian-django-payments
version = attr: georgian_payments.__version__
url = https://github.com/graey-ge/georgian-django-payments
author = graey
author_email = info@graey.ge
description = Django App for Georgian Payment Providers
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
package = georgian_payments
classifiers =
    Framework :: Django
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
install_requires =
    requests
    Django >= 3.1
    loguru==0.7.0
    geopayment==0.6.3
zip_safe = False
packages = find:
include_package_data = True
